--- a/index.html
+++ b/index.html
@@ -2,58 +2,41 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Styling Practice</title>
+    <title> Kevin Moscoso Farfan</title>
+    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
+    <style>
+      h1 {
+  text-align:center;
+      }
+      h2{
+        font-family: 'Mansalva', cursive;
+      }
+      h2{
+        font-family: 'Mansalva', cursive;
+      }
+      h3{
+        font-family: 'Mansalva', cursive;
+      }
+      body{
+        color:#4232a8;
+          text-align:center;
+      }
+    </style>
   </head>
-  <body>
-
-    <h3><u>Instructions:</u></h3>
-    <p>Style this page using the style attribute.
-    When you have finished styling it, you can add
-    to the page and practice some of the
-    things you have learned so far.</p>
-
-    <br><br>
-
-    <h1>Honors Web Design</h1>
-
-    <h2>We will be learning:</h2>
-    <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>Bootstrap</li>
-    </ul>
-
-    <br><br>
-
-    <table>
-      <tr>
-        <th>HTML Tags</th>
-        <th>Style Attribute Properties</th>
-      </tr>
-      <tr>
-        <td>
-          <p>Headers</p>
-        </td>
-        <td>
-          <p>Color</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Paragraphs</p>
-        </td>
-        <td>
-          <p>Size</p>
-        </td>
-      </tr>
-      <tr>
-        <td>
-          <p>Images</p>
-        </td>
-        <td>
-          <p>Background Color</p>
-        </td>
-      </tr>
-    </table>
+  <body style="background-color: #000000;">
+    <h1 style="font-family: 'Mansalva', cursive;">BEAUTY ALERT!
+    <h2 style="font-family: 'Mansalva', cursive;">Kevin Moscoso Farfan</h1>
+    <h3 style="font-family: 'Mansalva', cursive;">No Half Sends </h2>
+    <p  style="font-family: 'Mansalva', cursive;">Hey it's your boy Kevin back on your screen. this is my website and i hope yall like it.
+    <p  style="font-family:'Mansalva' , cursive;">So What i like to do is go home and take naps and take one for the boys. Also i like  going out with friends.
+    <p  style="font-family: 'Mansalva', cursive;"> FOLLOW ME AT
+  <ol style="+font-family: 'Mansalva', cursive;">
+  <li>Snapchact</li>
+  <li>Instagram</li>
+  <li>Twitter</li>
+  <li>Reddit</li>
+  <li>Facebook</li>
+  </ol>
+  <img src="img\send.jpg" alt="">
   </body>
 </html>
