--- a/index.html
+++ b/index.html
@@ -2,41 +2,43 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Kevin Moscoso Farfan</title>
-    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
-    <style>
-      h1 {
+    <title>The Joker Rated R</title>
+<style>
+body{
+  color:white;
   text-align:center;
-      }
-      h2{
-        font-family: 'Mansalva', cursive;
-      }
-      h2{
-        font-family: 'Mansalva', cursive;
-      }
-      h3{
-        font-family: 'Mansalva', cursive;
-      }
-      body{
-        color:#4232a8;
-          text-align:center;
-      }
-    </style>
-  </head>
-  <body style="background-color: #000000;">
-    <h1 style="font-family: 'Mansalva', cursive;">BEAUTY ALERT!
-    <h2 style="font-family: 'Mansalva', cursive;">Kevin Moscoso Farfan</h1>
-    <h3 style="font-family: 'Mansalva', cursive;">No Half Sends </h2>
-    <p  style="font-family: 'Mansalva', cursive;">Hey it's your boy Kevin back on your screen. this is my website and i hope yall like it.
-    <p  style="font-family:'Mansalva' , cursive;">So What i like to do is go home and take naps and take one for the boys. Also i like  going out with friends.
-    <p  style="font-family: 'Mansalva', cursive;"> FOLLOW ME AT
-  <ol style="+font-family: 'Mansalva', cursive;">
-  <li>Snapchact</li>
-  <li>Instagram</li>
-  <li>Twitter</li>
-  <li>Reddit</li>
-  <li>Facebook</li>
-  </ol>
-  <img src="img\send.jpg" alt="">
+  font-size: 40px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-image: url(img/background.jpg);
+}
+.pheonix {
+  height: 500px;
+}
+.cast-table {
+  width: 100vw;
+}
+</style>
+    </head>
+  <body>
+
+<h1> <u>The Joker Rated R</u> </h1>
+<h2>A failed Comedian named Arthur Fleck who seeks connections in Gotham City. He is a clown for a job. He feels so dissconnected from the world and he starts to become a madman.He becomes the joker
+<P> The Budget was 25 Million
+<P> The Release date was October 4, 2019
+  <h1> <u>The Cast Memebers</u></h1>
+  <table class="cast-table">
+    <tr>
+      <td><img class="pheonix" src="img/MC3.jpg"alt="s"></td>
+      <td><img class="pheonix" src="img/MC2.jpg"alt="s"></td>
+      <td><img class="pheonix" src="img/MC4.jpg"alt="s"></td>
+    </tr>
+    <tr>
+    <td>Zazie Beetz</td>
+    <td>Joaquin phoenix</td>
+    <td>Leigh Gill</td>
+    </tr>
+  </table>
+
   </body>
 </html>
