--- a/index.html
+++ b/index.html
@@ -2,43 +2,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Kevin Moscoso Farfan</title>
-    <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
-    <style>
-      h1 {
-  text-align:center;
-      }
-      h2{
-        font-family: 'Mansalva', cursive;
-      }
-      h2{
-        font-family: 'Mansalva', cursive;
-      }
-      h3{
-        font-family: 'Mansalva', cursive;
-      }
-      body{
-        color:#4232a8;
-          text-align:center;
-      }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Kevin's HomePage</title>
   </head>
-  <body style="background-color: #000000;">
-    <h1 style="font-family: 'Mansalva', cursive;">BEAUTY ALERT!
-    <h2 style="font-family: 'Mansalva', cursive;">Kevin Moscoso Farfan</h1>
-    <h3 style="font-family: 'Mansalva', cursive;">No Half Sends </h2>
-    <p  style="font-family: 'Mansalva', cursive;">Hey it's your boy Kevin back on your screen. this is my website and i hope yall like it.
-    <p  style="font-family:'Mansalva' , cursive;">So What i like to do is go home and take naps and take one for the boys. Also i like  going out with friends.
-    <p  style="font-family: 'Mansalva', cursive;"> FOLLOW ME AT
-  <ol style="+font-family: 'Mansalva', cursive;">
-  <li>Snapchact</li>
-  <li>Instagram</li>
-  <li>Twitter</li>
-  <li>Reddit</li>
-  <li>Facebook</li>
-  </ol>
-  <img src="img\send.jpg" alt="">
-  <a href="https://thekevinmf.github.io/Movie.io/">MOVIE link</a>
-  <a href="https://thekevinmf.github.io/Calendar.io/">CALENDAR link</a>
+  <body>
+  <h1><u>Kevin's HomePage</u></h1>
+  <h1>Welcome</h1>
+  <img class="send" src="img/send.jpg"alt="s">
   </body>
 </html>
