--- a/index.html
+++ b/index.html
@@ -4,10 +4,24 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <title>Kevin's HomePage</title>
+
   </head>
   <body>
   <h1><u>Kevin's HomePage</u></h1>
   <h1>Welcome</h1>
-  <img class="send" src="img/send.jpg"alt="s">
+  <table class="Kevin-table">
+    <tr>
+      <td><img class="Things" src="img/pizza.jpg"alt="s"></td>
+      <td><img class="Things" src="img/red.jpg"alt="s"></td>
+      <td><img class="Things" src="img/send.jpg"alt="s"></td>
+    </tr>
+    <tr>
+    <td>My favorite food</td>
+    <td>My favorite artist</td>
+    <td>My favorite saying</td>
+    </tr>
+  </table>
+    <a href="file:///C:/Users/122kmoscosofarfan/Desktop/movie/index.html">My Movie Page</a>
   </body>
+
 </html>
