--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <td>My favorite saying</td>
     </tr>
   </table>
-    <a href="file:///C:/Users/122kmoscosofarfan/Desktop/movie/index.html">My Movie Page</a>
+    <a href="Work.html">My Movie Page</a>
   </body>
 
 </html>
